--- a/index.html
+++ b/index.html
@@ -1,40 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" href="assets/favicon-32x32.png" type="image/x-icon">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="shortcut icon"
+      href="assets/favicon-32x32.png"
+      type="image/x-icon"
+    />
     <title>Product View</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <main id="CardComponent">
-        <section id="ImageContent">
-            <figure>
-                <picture>
-                    <source media="(min-width: 600px)" srcset="assets/image-product-desktop.jpg">
-                    <img src="assets/image-product-mobile.jpg" alt="Product">
-                </picture>
-            </figure>
-        </section>
-        <section id="TextContent">
-            <article>
-                <p>Perfume</p>
-                <h1>Gabrielle Essence Eau De Parfum</h1>
-                <p>
-                    A floral, solar and voluptuous interpretation composed by Olivier Polge,
-                    Perfumer-Creator for the House of CHANEL.
-                </p>
-                <article id="Prices">
-                    <p>$149.99</p>
-                    <p>$169.99</p>
-                </article>
-                <button type="button"><img src="assets/icon-cart.svg" alt="">Add to Cart</button>
-            </article>
-        </section>
+      <section id="ImageContent">
+        <figure>
+          <picture>
+            <source
+              media="(min-width: 576px) and (min-height: 438px)"
+              srcset="assets/image-product-desktop.jpg"
+            />
+            <img src="assets/image-product-mobile.jpg" alt="Product" />
+          </picture>
+        </figure>
+      </section>
+      <section id="TextContent">
+        <article>
+          <p>Perfume</p>
+          <h1>Gabrielle Essence Eau De Parfum</h1>
+          <p>
+            A floral, solar and voluptuous interpretation composed by Olivier
+            Polge, Perfumer-Creator for the House of CHANEL.
+          </p>
+          <article id="Prices">
+            <p>$149.99</p>
+            <p>$169.99</p>
+          </article>
+          <button type="button">
+            <img src="assets/icon-cart.svg" alt="" />Add to Cart
+          </button>
+        </article>
+      </section>
     </main>
-</body>
-
+  </body>
 </html>
